# rust-gpu-wgpu-compute-minimal

./: Cargo.toml
kernels/collatz/: Cargo.toml
src/: main.rs
